# passman

./: .pre-commit-config-dev.yaml  .pre-commit-config-prod.yaml  Makefile  README.md  pyproject.toml  pytype.cfg
.github/workflows/: makefile.yml
src/passman/: __main__.py  __version__.py  parseargs.py  passman.py  trapper.py
src/passman/config/: parseargs.py
src/passman/console/: app.py
src/passman/crypto/: crypto.py
